Closed Bug 1854881 Opened 2 years ago Closed 2 years ago

Fix non-unified build error in ipc/glue/ProtocolUtils.cpp

Categories

(Core :: IPC, defect, P3)

Unspecified
macOS
defect

Tracking

()

RESOLVED FIXED
120 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox118 --- wontfix
firefox119 --- wontfix
firefox120 --- fixed

People

(Reporter: cpeterson, Assigned: cpeterson)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

ipc/glue/ProtocolUtils.cpp:84:20: error: 'return' will never be executed [-Werror,-Wunreachable-code-return]
return IPCResult(false);

This error is a regression from bug 1778860.

ipc/glue/ProtocolUtils.cpp:84:20: error: 'return' will never be executed [-Werror,-Wunreachable-code-return]
return IPCResult(false);

This error is a regression from bug 1778860.

Pushed by cpeterson@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/399bdc5c0788 Fix non-unified build error in ipc/glue/ProtocolUtils.cpp. r=jstutte,andi
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 120 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: