Bug 1854881 - Fix non-unified build error in ipc/glue/ProtocolUtils.cpp. r=jstutte,andi

ipc/glue/ProtocolUtils.cpp:84:20: error: 'return' will never be executed [-Werror,-Wunreachable-code-return]
  return IPCResult(false);

This error is a regression from bug 1778860.

Differential Revision: https://phabricator.services.mozilla.com/D189082